tests/functional2/lang/rec-set-merges/depr-2.err.exp
error: undefined variable 'x'
       at /pwd/in.nix:7:9:
            6|     x = 1;
            7|     y = x;
             |         ^
            8|   };
